Remove Jung dependency for guava, introduce modules