@@ -12,32 +12,13 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-
-                            <artifactSet>
-                                <includes>
-                                    <include>org.ow2.asm:*</include>
-                                </includes>
-                            </artifactSet>
-
-                            <relocations>
-                                <relocation>
-                                    <pattern>org.objectweb.asm</pattern>
-                                    <shadedPattern>org.pitest.highwheel.parser.asm</shadedPattern>
-                                </relocation>
-
-                            </relocations>
-                        </configuration>
-                    </execution>
-                </executions>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens com.github.highwheel.modules.parser/com.github.fburato.highwheelmodules.bytecodeparser=ALL-UNNAMED
+                        --add-opens com.github.highwheel.modules.parser/com.github.fburato.highwheelmodules.bytecodeparser.classpath=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
